finished styling index page

--- a/_posts/2015-9-30-15-to-denver.html
+++ b/_posts/2015-9-30-15-to-denver.html
@@ -4,4 +4,7 @@ layout: post
 date: 2015-09-30
 ---
 
-<p>The Saga</p>
+<p>The Saga Continues...soon.</p>
+<br>
+<img id="miata-in-mountains" src="https://scontent-dfw1-1.cdninstagram.com/hphotos-xap1/t51.2885-15/e35/12145504_1504656809852934_824607467_n.jpg" alt="trip trajectory">
+
