--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ layout: default
 </div>
 {% endfor %}
 </div>
-<a href="/">
-<div id="mountaindiv"">
-  <h2 id="dan2">Dan Winter</h2>
-</div></a>
+<div id="bottomdiv">
+  <p>Each blog post is a collection of both raw images and retouched photos. How do you remember your adventures?</p>
+</div>
