--- a/_posts/1987-04-05-about-dan.html
+++ b/_posts/1987-04-05-about-dan.html
@@ -3,4 +3,4 @@ title: About Dan
 layout: post
 date: 1987-04-05
 ---
-<div class="about-text">Dan's just a guy learning to code at <a href="http://turing.io">Turing School of Software and Design</a></div>
+<div class="about-text">Dan's just a guy learning to code at <a href="http://turing.io">Turing School of Software and Design</a>.</div>
